# stringart

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: stringart_docs.yml  stringart_docs_gh_pages.yml  stringart_tests.yml
docs/source/: conf.py  index.rst  stringart.rst
docs/source/technical_info/: algorithm_technical_breakdown.md  benchmarks.pkl  caching_performance_benchmark.md
docs/source/technical_info/caching_benchmark_script/: benchmark_table.csv  benchmark_table.md  benchmarks.pkl  caching_benchmark.py
docs/source/tutorials/parameters_guide/: advanced_parameters.md  base_parameters.md  parameters_guide.md
docs/source/tutorials/preprocessing_tips/: image_contrast.md  preprocessing_tips.md  remove_background.md
docs/source/tutorials/quickstart_guide/: installation.md  parameters_cheatsheet.md  quickstart.md  quickstart_guide.md
src/stringart/: __init__.py  animate.py  canvas.py  cli.py  demo.py  image_io.py  main.py  pathfinding.py  pathfinding_precache.py  skip.py  transforms.py  ui.py
src/stringart/data/help_app/: parameters.md  quickstart.md  tips.md
tests/: test_canvas.py  test_cli.py  test_image_io.py  test_main.py  test_pathfinding.py  test_pathfinding_precache.py  test_skip.py  test_transforms.py
